--- a/src/main/webapp/css/wr8.css
+++ b/src/main/webapp/css/wr8.css
@@ -12,3 +12,11 @@
 .panel-heading a.collapsed:after {
     content:"\e080";
 }
+
+
+
+.panel-heading a,
+a:hover {
+    text-decoration: none;
+}
+   
