--- a/src/main/webapp/partials/network_map_list.html
+++ b/src/main/webapp/partials/network_map_list.html
@@ -1,7 +1,9 @@
 <div class="bootbox-body">
-	<div id="network-graph-wrapper" class="panel2">
-		<div>
-			<div role="tabpanel">
+	<div id="network-graph-wrapper" class="panel panel-default">
+		<div class='panel-heading' style='text-align: center'>
+		   <button data-bind='click: requestNetworkMap' type='button' class='btn btn-warning'>Request Network Mapping</button>
+		</div>
+			<div role="tabpanel" class='panel-body'>
 				<!-- Nav tabs -->
 				<ul class="nav nav-tabs" role="tablist">
 					<li role="presentation" class="active"><a
